examples/test/testpolicy8527.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8527
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key38: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value19
      podSelector:
        matchLabels:
          key13: value41
          key16: value15
          key23: value24
